test/files/neg/t4460a.check
t4460a.scala:6: error: constructor invokes itself
  def this() = this() // was binding to Predef.<init> !!
               ^
one error found
